navigation dropdown fix

--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -307,3 +307,9 @@ button.owl-prev {
         }
     }
 }
+//.dropdown-toggle::after {
+//    display: none;
+//}
+span.caret{
+    display: none;
+}
