--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -28,13 +28,19 @@ body {
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem;
-    line-height: 1.3;
-    color: $headers;
+    line-height: 1.45;
+    color: $gray-900;
 
     @include media-breakpoint-down(lg) {
         br {
             display: none;
         }
+    }
+}
+
+.wp-content-body {
+    .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-top: 2rem;
     }
 }
 
@@ -47,6 +53,14 @@ body {
     @include media-breakpoint-down(sm) {
         font-size: 1.647058824rem;//28
     }
+}
+
+.page-title {
+    border-bottom: 3px solid $gray-900;
+    margin-bottom: 2rem;
+    padding-bottom: .5rem;
+    margin-left: -3rem;
+    padding-left: 3rem;
 }
 
 .h2, h2 {
