--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -2,104 +2,48 @@ button, .btn {
     cursor: pointer;
     font-family: $font-family-base;
     font-weight: 700;
-    border-radius: 1.333333333rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    line-height: 1.35rem;
-    color: white;
+    border-radius: 50rem;
+    padding: 0.5rem 1.25rem;
+    border-width: 2px;
 
     &:focus {
         outline: none;
     }
-
 }
 
+.btn-primary, .btn-secondary {
+    border: none;
+}
 
+.btn-secondary {
+    color: $white;
 
-@each $color, $value in $theme-colors {
-
-    .btn-#{$color}-arr {
-
-        color: white;
-        background: linear-gradient(to right, darken($value, 5%) 0%, $value 35%);
-
-        &::after {
-            font-family: 'Font Awesome 5 Free';
-            content: '\f0a9';
-            font-size: 1.4rem;
-            font-weight: 900;
-            font-style: normal;
-            margin:0px 0px 0px 1.5rem;
-            text-decoration:none;
-            vertical-align: middle;
-        }
-
+    &:hover,
+    &:not(:disabled):not(.disabled):active {
+        background: lighten($secondary, 10%);
     }
+}
 
-    .btn-#{$color}-menu {
+.btn--arrow {
+    position: relative;
+    padding: 0.5rem .75rem .5rem 1.25rem;
 
-        color: white;
-        background: linear-gradient(to right, darken($value, 5%) 0%, $value 35%);
-        @include media-breakpoint-down(lg) {
-            margin-left: auto;
-            margin-right: auto;
-        }
-        width: 250px;
-        @include media-breakpoint-up(lg) {
-            border-top-left-radius: 0px;
-            border-bottom-left-radius: 0px;
-            padding-left: 2.5rem;
-            padding-right: .5rem;
-            //width: 250px;
-        }
-
-        &::after {
-            font-family: 'Font Awesome 5 Free';
-            content: '\f0a9';
-            font-size: 1.4rem;
-            font-weight: 900;
-            font-style: normal;
-            margin:0px 0px 0px .5rem;
-            text-decoration:none;
-            vertical-align: middle;
-            @include media-breakpoint-up(lg) {
-                margin:0px 0px 0px .5rem;
-            }
-        }
-
+    &::after {
+        font-family: 'Font Awesome 5 Free';
+        content: '\f0a9';
+        font-size: 1.4rem;
+        font-weight: 900;
+        font-style: normal;
+        margin:0px 0px 0px 1.5rem;
+        text-decoration:none;
+        vertical-align: middle;
+        line-height: 0;
+        top: -.1rem;
+        position: relative;
+        right: -.1rem;
     }
+}
 
-    .btn-#{$color}-vid {
-
-        color: white;
-        background-color: $value;
-
-        &::after {
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 400;
-            content: '\f144';
-            color: rgba(white, .63);
-            font-size: 1.4rem;
-            margin:0px 0px 0px .65rem;
-            text-decoration:none;
-            vertical-align: middle;
-        }
-
-    }
-
-    .btn-#{$color}-grd {
-        background: linear-gradient(to right, darken($value, 5%) 0%, $value 35%);
-        color: white;
-    }
-
-    .btn-#{$color}-cta {
-        color: white;
-        background-color: $value;
-    }
-
-    .btn-outline-#{$color} {
-        color: $value;
-        border-width: 2px;
-    }
-
+.btn--icon i {
+    margin-left: .5rem;
 }
