--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,8 +1,9 @@
 // Bootstrap
 @import "bootstrap-custom";
 
-// Owl library
+// Dependencies
 @import "../../node_modules/owl.carousel/dist/assets/owl.carousel.css";
+@import "../../node_modules/magnific-popup/dist/magnific-popup.css";
 
 // Base
 @import "base/typography";
