--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -19,6 +19,10 @@ body {
         position: fixed;
         box-shadow: 17px 0px 84px -5px rgba(0, 0, 0, 0.1);
     }
+
+    @media screen and (max-height: 768px) and (min-width: 992px) {
+        position: absolute;
+    }
 }
 
 .side-b {
@@ -32,6 +36,11 @@ body {
 .padded-container {
     padding-left: 3rem;
     padding-right: 3rem;
+
+    @include media-breakpoint-down(lg) {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
 }
 
 .content {
@@ -74,6 +83,10 @@ body {
 
 .section {
     padding: 3.5rem 0;
+
+    @include media-breakpoint-down(lg) {
+        padding: 2.5rem 0;
+    }
 }
 
 .home-newsletter-cta {
@@ -93,15 +106,11 @@ body {
         background-color: #505d71;
         background-size: cover;
         margin-bottom: 14rem;
-        padding-bottom: 14rem;
-    }
-
-    @include media-breakpoint-up(xxl) {
-        padding-bottom: 20rem;
     }
 
     p.lead {
         margin-bottom: 3.5rem;
+
         @include media-breakpoint-up(xl) {
             margin-bottom: 7rem;
         }
@@ -110,7 +119,8 @@ body {
 
 .home-intro-cards {
     @include media-breakpoint-up(xl) {
-        position: absolute;
+        margin-bottom: -20rem;
+        padding-bottom: 8rem;
     }
 }
 
@@ -163,9 +173,7 @@ body {
 .card {
     border-radius: 0;
     border: none;
-    box-shadow: 0px 20px 70px rgba(0, 0, 0, 0.25);
-    margin-left: 25px;
-    margin-right: 25px;
+    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.15);
 
     img {
         border-bottom: 8px solid $site-yellow;
@@ -184,6 +192,9 @@ body {
     padding-top: 4rem;
     padding-bottom: 4rem;
     border-top: 8px solid #c6c6c6;
+}
+
+.home .accommodation-bg {
     background: url('../images/bg-accommodation.jpg') no-repeat 0 0;
     background-size: 100%;
 }
@@ -232,11 +243,10 @@ body {
 
 .owl-nav {
     display: inline-block;
-
 }
 
 .owl-carousel .owl-stage-outer {
-    padding: 2rem 0 4rem 0;
+    padding: 2rem 1.5rem 3rem 1.5rem;
 }
 
 .owl-nav button {
@@ -274,6 +284,36 @@ button.owl-prev {
     &:active {
         color: white;
         background-color: #4c4b4b;
+    }
+}
+
+// Owl flexbox tweak
+.card-body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.owl-carousel {
+    .owl-stage {
+        display: flex;
+    }
+
+    .owl-item {
+        display: flex;
+        flex: 1 0 auto;
+    }
+
+    .caption {
+        display: flex;
+        flex: 1 0 auto;
+        flex-direction: column;
+    }
+
+    .thumbnail {
+        display: flex;
+        flex-direction: column;
+        margin: 0 15px;
     }
 }
 
