--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -220,3 +220,14 @@
     }
 
 }
+
+.header-btns-m {
+    .btn {
+        display: block;
+        border-radius: 0;
+    }
+}
+
+.alert-banner {
+    color: $white;
+}
